  * GTK frontend:
    - Prevent gnome-screensaver from kicking in while Espresso is running
      (closes: Malone #34510 espresso-frontend-gtk task).
    - Translate window title immediately when changing language.
    - Make title of install progress bar translatable.
  * Make sure that debconffilter never tries to call the same widget more
    than once for a single command.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 20 Mar 2006 11:45:26 +0000

espresso (0.99.31) dapper; urgency=low

  * Add a pile of translations (only about two per language, but better than
    nothing) taken from elsewhere in the installer.
  * GTK frontend:
    - Fix immediate translation of widgets when changing language.
    - Add a disk selector. Requires partman (>= 78ubuntu1+10).
  * KDE frontend:
    - Add disk selector stub methods. These need to be fleshed out.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 20 Mar 2006 10:15:16 +0000

espresso (0.99.30) dapper; urgency=low

  * GTK frontend:
    - Move partitioning committal into the main installation progress bar.
  * Remove text resizing based on the screen size, which as well as being
    annoying was also implemented in a way that made our lives difficult for
    internationalisation.
  * Add internationalisation support for those strings that don't come from
    d-i, with translations stored in debconf templates. I've only set this
    up in the GTK frontend so far, but it should be straightforward to do
    elsewhere. Requires espresso-locale (>= 0.27ubuntu11).
  * Improve the final dialog text.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 17 Mar 2006 00:23:59 +0000

espresso (0.99.29) dapper; urgency=low

  * Fix variable/method name clash in Install's apt error handling.
  * GTK frontend:
    - Rename "Adjust..." to "Set Time...".
    - Remove justification text on location page; instead, add brief
      instructions at the top. Rename "Nearest city" to "Selected city".
    - Make the password entry boxes smaller.